test-suite/tests/roundtrip/invalid/syntax/multiple/02/via-conjure.generated-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/multiple/02/input.essence:1:1:
  |
1 | fiuch that A = {1,2,3} inters$ true 
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/roundtrip/invalid/syntax/multiple/02/input.essence:2:16:
  |
2 | find b  : bool sat A = {1,2,3} inters$ trueb = ؊1,1}
  |                ^
Missing ,

tests/roundtrip/invalid/syntax/multiple/02/input.essence:2:20:
  |
2 | find b  : bool sat A = {1,2,3} inters$ trueb = ؊1,1}
  |                    ^
Missing ,

tests/roundtrip/invalid/syntax/multiple/02/input.essence:2:22:
  |
2 | find b  : bool sat A = {1,2,3} inters$ trueb = ؊1,1}
  |                      ^^^^^^^^^^^^^^^^
Skipped tokens

tests/roundtrip/invalid/syntax/multiple/02/input.essence:2:22:
  |
2 | find b  : bool sat A = {1,2,3} inters$ trueb = ؊1,1}
  |                      ^
Missing Domain

tests/roundtrip/invalid/syntax/multiple/02/input.essence:2:22:
  |
2 | find b  : bool sat A = {1,2,3} inters$ trueb = ؊1,1}
  |                      ^
Missing :

